--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -5,5 +5,8 @@ $desktop: 1024px;
 $primary-font: 'Roboto', sans-serif;
 
 $primary-color: #000000;
-$secondary-color: #ff6b08;
-$thirth-color: #ffffff;
+$secondary-color: #ffffff;
+$secondary-color-shade-light: #F7F7F7;
+$secondary-color-shade-dark: #545454;
+$accent-color: #FF6B08;
+$warning-color: #FF001B;
