--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,3 +1,5 @@
 @import './utils/variables';
 @import './utils/mixins';
+@import './components/reset';
 @import './components/container';
+@import './layouts/footer';
