add html and css loader

--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -10,3 +10,4 @@ $secondary-color-shade-light: #F7F7F7;
 $secondary-color-shade-dark: #545454;
 $accent-color: #FF6B08;
 $warning-color: #FF001B;
+$btn-color: #FF6B01;
