--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -10,3 +10,6 @@ $secondary-color-shade-light: #F7F7F7;
 $secondary-color-shade-dark: #545454;
 $accent-color: #FF6B08;
 $warning-color: #FF001B;
+
+$transition-duration: 250ms;
+$transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
