--- a/src/template/movieCard.hbs
+++ b/src/template/movieCard.hbs
@@ -1,6 +1,6 @@
 {{#each this}}
     <div class="movie-card" id="movie-card">
-        <img class="movie-card__img" src="#" alt="#" />
+        <img class="movie-card__img" src="../images/stub/stub-img.jpg" alt="#" />
         <div class="movie-card__info">
           <h2 class="movie-card__title">some genre</h2>
           <p class="movie-card__brief">some brife | 2022</p>
