--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -2,4 +2,5 @@
 @import './utils/mixins';
 @import './components/reset';
 @import './components/container';
-@import './layouts/footer';
+@import './layouts/footer/footer';
+@import './layouts/footer/footer-modal';
