footer modal socials icons

--- a/src/partials/utils/footer-modal.html
+++ b/src/partials/utils/footer-modal.html
@@ -32,15 +32,24 @@
                 <li id="slide1" class="slides__item">
                     <img src="https://cdn.rawgit.com/huijing/filerepo/gh-pages/lw1.jpg" alt="" class="slides__img"/>
                     <p class="slides__name">Boiko Juliya</p>
-                    <a href="" class="slides__link">Gitthub</a>
-                    <a href="" class="slides__link">LinkedIn</a>
+                    <ul class="slides-social">
+                        <li class="slides-social__item">
+                            <a href="" class="slides-social__link">
+                                <svg class="slides-social__icon">
+                                    <use href="./images/icons.svg#icon-github"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="slides-social__item">
+                            <a href="" class="slides-social__link">
+                                <svg class="slides-social__icon">
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
                 </li>
-                <li id="slide2" class="slides__item">
-                    <img src="https://cdn.rawgit.com/huijing/filerepo/gh-pages/lw2.jpg" alt="" class="slides__img"/>
-                    <p class="slides__name">John Smith</p>
-                    <a href="" class="slides__link">Github</a>
-                    <a href="" class="slides__link">LinkedIn</a>
-                </li>
+                <li id="slide2" class="slides__item"><img src="https://cdn.rawgit.com/huijing/filerepo/gh-pages/lw2.jpg" alt="" class="slides__img"/></li>
                 <li id="slide3" class="slides__item"><img src="https://cdn.rawgit.com/huijing/filerepo/gh-pages/lw3.jpg" alt="" class="slides__img"/></li>
                 <li id="slide4" class="slides__item"><img src="https://cdn.rawgit.com/huijing/filerepo/gh-pages/lw4.jpg" alt="" class="slides__img"/></li>
                 <li id="slide5" class="slides__item"><img src="https://cdn.rawgit.com/huijing/filerepo/gh-pages/lw5.jpg" alt="" class="slides__img"/></li>
