--- a/src/partials/utils/pagination.html
+++ b/src/partials/utils/pagination.html
@@ -1,15 +1,16 @@
 <div class="pagination__container container">
-    <button class="pagination__button arrow-left"></button>
-    <button class="pagination__button pagination--current" data-index="1">
+    <button class="pagination__button arrow-left" ></button>
+    <button class="pagination__button " data-start="start">
         1
       </button>
-    <span class="dots" id="previous">...</span>
+    <span class="dots" id="previous" >...</span>
+    <button class="pagination__button pagination__button--current" data-index="1">1</button>
     <button class="pagination__button" data-index="2">2</button>
     <button class="pagination__button" data-index="3">3</button>
     <button class="pagination__button" data-index="4">4</button>
     <button class="pagination__button" data-index="5">5</button>
     <span class="dots" id="after">...</span>
-    <button class="pagination__button last-button">1000</button>
+    <button class="pagination__button pagination__button--last">1000</button>
     <button class="pagination__button arrow-right"></use>
     </svg></button>
 </div>
