--- a/src/partials/utils/loader.html
+++ b/src/partials/utils/loader.html
@@ -1,7 +1,9 @@
-<!-- <div class="loader">
+<button class="click">on</button>
+
+<div class="loader">
   <div class="loader-container">
     <div class="loader-box">
       <span class="loader-box__elem"></span>
     </div>
   </div>
-</div> -->
+</div>
