--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -6,6 +6,7 @@
 @import './components/container';
 @import './components/movie-card';
 @import './components/pagination';
+@import './components/header-home-page.scss';
 
 @import './layouts/footer/footer';
 @import './layouts/footer/footer-modal';
