--- a/src/partials/my-library/header.html
+++ b/src/partials/my-library/header.html
@@ -8,11 +8,11 @@
             <span class="logo-name">Filmoteka</span>
             </a>
                 <ul class="pages">
-                    <li class="page">
-                        <a href="/src/index.html" class="page-link">HOME</a>
+                    <li class="page home">
+                        <a href="/src/index.html" class="page-link">home</a>
                     </li>
-                    <li class="page">
-                        <a href="/src/library.html" class="page-link">MY LIBRARY</a>
+                    <li class="page library">
+                        <a href="/src/library.html" class="page-link">my library</a>
                     </li>
                 </ul>
         </nav>
