--- a/src/sass/components/_header-library.scss
+++ b/src/sass/components/_header-library.scss
@@ -1,42 +1,34 @@
 .header-container {
     padding-top: 40px;
     padding-bottom: 40px;
+    background-color: black;
     background-repeat:no-repeat;
+    background-size: cover;
     @media screen and (max-width: 767px) {
     padding-left: 20px;
     padding-right: 20px;
-    
+    background-image: url(/src/images/header-background-image-tablet.jpg);
     };
     @media screen and (min-width: $tablet) {
         padding-left: 32px;
         padding-right: 32px;
-        background-image: url(/src/images/header-background-image-desktop.jpg);
+        background-image: url(/src/images/header-background-image-tablet.jpg);
     };
     @media screen and (min-width: $desktop) {
         padding-left: 70px;
         padding-right: 70px;
         background-image: url(/src/images/header-background-image-desktop.jpg);
     };
-    @media screen and (max-width: $mobile) {
-    background-image: url(/src/images/header-background-image-mobile.jpg);
-    };
-    @media screen and (max-width: $tablet) {
-        background-image: url(/src/images/header-background-image-tablet.jpg);
-    };
-
+        @media screen and (max-width: $mobile) {
+            
+            background-image: url(/src/images/header-background-image-mobile.jpg);
+        }
+    
+        ;
 }
 
 .logo-container {
     text-decoration: none;
-}
-
-.logo-name {
-    font-style: normal;
-    font-weight: 500;
-    font-size: 30px;
-    line-height: 1.17;
-    color: $secondary-color;
-    
 }
 
 nav {
@@ -54,21 +46,27 @@ nav {
 
 .logo-name {
     @media screen and (max-width: 767px) {
-        visibility: hidden;
+        display: none;
     };
     @media screen and (min-width: $tablet) {
-        visibility: visible;
+        display:block;
     };
-
-        margin-left:10px;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 30px;
+    line-height: 1.17;
+    color: $secondary-color;
+    margin-left: 10px;
+    margin-left:10px;
 }
 
 .pages {
     display: flex;
 }
 
-.page-link {
+.library {
     margin-left: 40px;
+    border-bottom: 3px solid $accent-color;
 }
 
 .header-buttons-list {
@@ -78,18 +76,23 @@ nav {
 }
 
 .header-button {
+background-color: transparent;
+border: 2px solid $secondary-color;
+border-radius: 5px;
+color:$secondary-color;
+
 @media screen and (max-width: 767px) {
     width: 129px;
-    heigth: 44px;
+    height: 44px;
 };
 
 @media screen and (min-width: $tablet) {
     width: 152px;
-    heigth: 44px;
+    height: 44px;
 };
 @media screen and (min-width: $desktop) {
     width: 147px;
-    heigth: 42px;
+   height: 42px;
 }
     
 }
@@ -117,7 +120,12 @@ nav {
     line-height: 1.17;
     color: $secondary-color;
     text-decoration: none;
+    text-transform: uppercase;
 }
 
+.active {
+    background-color: $accent-color;
+    border:2px solid $accent-color;
+}
 
 
