--- a/src/partials/home-page/header.html
+++ b/src/partials/home-page/header.html
@@ -3,7 +3,7 @@
     <div class="container">
       <div class="header-section">
         <nav class="navigation">
-          <a class="navigation__logo logo">
+          <a class="navigation__logo logo" href="/src/index.html">
             <svg class="logo__icon" width="24" height="24">
               <use href="/src/images/header-home-page/sprite.svg#logo"></use>
             </svg>
@@ -12,7 +12,7 @@
 
           <ul class="side-nav">
             <li class="side-nav__item">
-              <a href="" class="side-nav__link side-nav__link--current-page">Home</a>
+              <a href="/src/index.html" class="side-nav__link side-nav__link--current-page">Home</a>
             </li>
             <li class="side-nav__item">
               <a href="/src/library.html" class="side-nav__link">My library</a>
