--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -6,13 +6,12 @@ $primary-font: 'Roboto', sans-serif;
 
 $primary-color: #000000;
 $secondary-color: #ffffff;
-$secondary-color-shade-light: #F7F7F7;
+$secondary-color-shade-light: #f7f7f7;
 $secondary-color-shade-dark: #545454;
-$accent-color: #FF6B08;
-$warning-color: #FF001B;
+$accent-color: #ff6b08;
+$warning-color: #ff001b;
 
 $transition-duration: 250ms;
 $transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
-$btn-color: #FF6B01;
-
+$btn-color: #ff6b01;
