--- a/src/sass/components/_pagination.scss
+++ b/src/sass/components/_pagination.scss
@@ -1,6 +1,11 @@
 .pagination__container {
     @extend %flex-center-style;
-    padding: 60px 0;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    @media screen and (min-width: $tablet){
+        padding-top: 60px;
+        padding-bottom: 60px;  
+    }
 }
 .pagination__button {
     @include transition (border-color);
@@ -9,7 +14,6 @@
     font-family: $primary-font;
     width: 40px;
     height: 40px;
-    // margin: 0 2px;
     padding: 8px;
     background-color: $secondary-color;
     color: $primary-color;
@@ -29,10 +33,8 @@
 }
 .arrow-left, .arrow-right {
     background-color: $secondary-color-shade-light;
-    // transform: matrix(-1,0,0,1,0,0);
     background-position: 50%;
     background-repeat: no-repeat;
-    
 }
 .arrow-left {
     background-image: url('/src/images/arrow-left.svg');
@@ -44,4 +46,9 @@
     width: 40px;
     height: 40px;
     padding: 8px;
+}
+.pagination__button--last, .dots, .startBtn {
+    @media screen and (max-width: 767px){
+        display: none;
+    }
 }
