--- a/src/partials/utils/footer.html
+++ b/src/partials/utils/footer.html
@@ -6,6 +6,6 @@
             <use href="./images/icons.svg#icon-heart"></use>
         </svg>
         by
-        <span class="footer__info--accent">GoIT Students</span>
+        <span class="footer__info--accent js-open-modal">GoIT Students</span>
     </p>
 </footer>
