--- a/src/sass/layouts/footer/_footer-modal.scss
+++ b/src/sass/layouts/footer/_footer-modal.scss
@@ -1,38 +1,42 @@
 
 .backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 20;
+    padding: 0 15px;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: $secondary-color-shade-light;
+    background-color: rgba($secondary-color-shade-dark, 0.5);
+    transition: opacity 400ms ease-in-out;
+}
+
+.is-hidden {
+    opacity: 0;
+    pointer-events: none;
 }
 
 .footer-modal {
     position: relative;
     width: $mobile;
     padding: 20px;
-    @media screen and (min-width: $tablet) {
-        width: $tablet;
-        padding: 20px;
-    }
-    // outline: 1px solid red;
 }
 
 .footer-modal-close-btn {
     position: absolute;
-    top: 8px;
+    top: 10px;
     right: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 1px;
+    padding: 0;
     border: none;
     border-radius: 50%;
     background-color: $secondary-color-shade-light;
     cursor: pointer;
-
-    @media screen and (min-width: $tablet) {
-        right: 235px;
-    }
 
     .footer-modal-close-btn__icon {
         width: 14px;
@@ -47,6 +51,7 @@
 .slider-container {
     display: flex;
     justify-content: center;
+                box-shadow: 8px 9px 32px -2px #000000;
 }
 
 .thumbnails {
@@ -54,18 +59,13 @@
     flex-direction: column;
     line-height: 0;
 
-
-    .thumbnails__item {
-        flex: auto;
-    }
-
     .thumbnails__link {
         display: block;
     }
 
     .thumbnails__img {
         width: 40px;
-        // height: 20vmin;
+        height: 50px;
         object-fit: cover;
         object-position: top;
     }
@@ -74,14 +74,9 @@
 .slides {
     overflow: hidden;
     width: 200px;
-    // width: 75vmin;
-    // height: 100vmin;
 
     .slides__item {
         width: 200px;
-        // height: 100%;
-        // width: 75vmin;
-        // height: 100vmin;
         position: absolute;
         z-index: 1;
         background-color: $secondary-color-shade-light;
@@ -89,7 +84,7 @@
 
     .slides__img {
         width: 200px;
-        // height: 100vmin;
+        height: 250px;
         object-fit: cover;
         object-position: top;
     }
@@ -100,33 +95,34 @@
         margin-bottom: 5px;
     }
 
-    .slides-social {
-        padding: 0 20px;
-        display: flex;
-        justify-content: center;
+    .slides__name--accent {
+        color: $accent-color;
+    }
+}
 
-        .slides-social__item:not(:last-child) {
-            margin-right: 15px;
-        }
+.slides-social {
+    padding: 0 20px;
+    display: flex;
+    justify-content: center;
 
-        .slides__link {
-            display: block;
-
-
-        }
-
-        .slides-social__icon {
-            width: 20px;
-            height: 20px;
-            fill: $secondary-color-shade-dark;
-            transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-            &:hover {
-                fill: $accent-color;
-            }
-        }
+    .slides-social__item:not(:last-child) {
+        margin-right: 15px;
     }
 
+    .slides__link {
+        display: block;
+    }
 
+    .slides-social__icon {
+        width: 20px;
+        height: 20px;
+        fill: $secondary-color-shade-dark;
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+        &:hover {
+            fill: $accent-color;
+        }
+    }
 }
 
 .slides__item:target {
@@ -137,8 +133,6 @@
 .slides__item:not(:target) {
     animation: hidden 1s 1;
 }
-
-
 
 @keyframes slide {
     0% {
