hover and focus are add

--- a/src/partials/my-library/header.html
+++ b/src/partials/my-library/header.html
@@ -1,4 +1,5 @@
-<header>
+
+<header class="overlay">
     <div class="header-container">
         <nav>
             <a class="logo-container" href="/src/index.html">
