--- a/src/sass/components/_header-library.scss
+++ b/src/sass/components/_header-library.scss
@@ -3,7 +3,7 @@
     padding-top: 40px;
     padding-bottom: 40px;
     background:linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-    url('/src/images/header-background-image-mobile.jpg');
+    url('/src/images/header-library/header-background-image-mobile.webp');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -12,15 +12,22 @@
     @media screen and (min-width: $mobile) {
       height: 230px;
       background: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-              url('/src/images/header-background-image-mobile.jpg');
+              url('/src/images/header-library/header-background-image-mobile.webp');
       background-repeat: no-repeat;
       background-size: cover;
       background-position: center;
+    @media screen and (max-width: ($tablet - 1)) and (min-device-pixel-ratio: 2),
+        screen and (max-width: ($tablet - 1)) and (min-resolution: 192dpi),
+        screen and (max-width: ($tablet - 1)) and (min-resolution: 2dppx) {
+            background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56),
+                    rgba(0, 0, 0, 0.56)),
+                url('/src/images/header-library/mobile\ 2x.webp');
       };
+    }
     @media screen and (min-width: $tablet) {
     height: 219px;
     background: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-            url('/src/images/header-background-image-tablet.jpg');
+            url('/src/images/header-library/header-background-image-tablet.webp');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -28,11 +35,34 @@
     @media screen and (min-width: $tablet) {
         height: 216px;
         background: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-        url('/src/images/header-background-image-desktop.jpg');
+        url('/src/images/header-library/header-background-image-tablet.webp');
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
+        @media screen and (max-width: ($desktop - 1)) and (min-device-pixel-ratio: 2),
+            screen and (max-width: ($desktop - 1)) and (min-resolution: 192dpi),
+            screen and (max-width: ($desktop - 1)) and (min-resolution: 2dppx) {
+                background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56),
+                        rgba(0, 0, 0, 0.56)),
+                    url('/src/images/header-library/tablet\ 2x.webp');
     };
+    @media screen and (min-width: $desktop) {
+        height: 216px;
+        background: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+        url('/src/images/header-library/header-background-image-desktop.webp');
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        @media screen and (min-device-pixel-ratio: 2),
+            screen and (min-resolution: 192dpi),
+            screen and (min-resolution: 2dppx) {
+                background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56),
+                        rgba(0, 0, 0, 0.56)),
+                    url('/src/images/header-library/desktop\ 2x.webp');
+            }
+
+    }     
+}
 }
 .header-container {
     margin-left: auto;
