--- a/src/sass/components/_header-library.scss
+++ b/src/sass/components/_header-library.scss
@@ -1,198 +1,220 @@
 .overlay {
-    max-width: 1600px;
-    padding-top: 40px;
-    padding-bottom: 40px;
-    background:linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+  max-width: 1600px;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  background: linear-gradient(
+      to right,
+      rgba(0, 0, 0, 0.56),
+      rgba(0, 0, 0, 0.56)
+    ),
     url('/src/images/header-library/header-background-image-mobile.webp');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  margin-left: auto;
+  margin-right: auto;
+  @media screen and (min-width: $mobile) {
+    height: 230px;
+    background: linear-gradient(
+        to right,
+        rgba(0, 0, 0, 0.56),
+        rgba(0, 0, 0, 0.56)
+      ),
+      url('/src/images/header-library/header-background-image-mobile.webp');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    margin-left: auto;
-    margin-right: auto;
-    @media screen and (min-width: $mobile) {
-      height: 230px;
-      background: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-              url('/src/images/header-library/header-background-image-mobile.webp');
+    @media screen and (max-width: ($tablet - 1)) and (min-device-pixel-ratio: 2),
+      screen and (max-width: ($tablet - 1)) and (min-resolution: 192dpi),
+      screen and (max-width: ($tablet - 1)) and (min-resolution: 2dppx) {
+      background-image: linear-gradient(
+          to right,
+          rgba(0, 0, 0, 0.56),
+          rgba(0, 0, 0, 0.56)
+        ),
+        url('/src/images/header-library/mobile\ 2x.webp');
+    }
+  }
+  @media screen and (min-width: $tablet) {
+    height: 219px;
+    background: linear-gradient(
+        to right,
+        rgba(0, 0, 0, 0.56),
+        rgba(0, 0, 0, 0.56)
+      ),
+      url('/src/images/header-library/header-background-image-tablet.webp');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+  }
+  @media screen and (min-width: $tablet) {
+    height: 216px;
+    background: linear-gradient(
+        to right,
+        rgba(0, 0, 0, 0.56),
+        rgba(0, 0, 0, 0.56)
+      ),
+      url('/src/images/header-library/header-background-image-tablet.webp');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    @media screen and (max-width: ($desktop - 1)) and (min-device-pixel-ratio: 2),
+      screen and (max-width: ($desktop - 1)) and (min-resolution: 192dpi),
+      screen and (max-width: ($desktop - 1)) and (min-resolution: 2dppx) {
+      background-image: linear-gradient(
+          to right,
+          rgba(0, 0, 0, 0.56),
+          rgba(0, 0, 0, 0.56)
+        ),
+        url('/src/images/header-library/tablet\ 2x.webp');
+    }
+    @media screen and (min-width: $desktop) {
+      height: 216px;
+      background: linear-gradient(
+          to right,
+          rgba(0, 0, 0, 0.56),
+          rgba(0, 0, 0, 0.56)
+        ),
+        url('/src/images/header-library/header-background-image-desktop.webp');
       background-repeat: no-repeat;
       background-size: cover;
       background-position: center;
-    @media screen and (max-width: ($tablet - 1)) and (min-device-pixel-ratio: 2),
-        screen and (max-width: ($tablet - 1)) and (min-resolution: 192dpi),
-        screen and (max-width: ($tablet - 1)) and (min-resolution: 2dppx) {
-            background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56),
-                    rgba(0, 0, 0, 0.56)),
-                url('/src/images/header-library/mobile\ 2x.webp');
-      };
+      @media screen and (min-device-pixel-ratio: 2),
+        screen and (min-resolution: 192dpi),
+        screen and (min-resolution: 2dppx) {
+        background-image: linear-gradient(
+            to right,
+            rgba(0, 0, 0, 0.56),
+            rgba(0, 0, 0, 0.56)
+          ),
+          url('/src/images/header-library/desktop\ 2x.webp');
+      }
     }
-    @media screen and (min-width: $tablet) {
-    height: 219px;
-    background: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-            url('/src/images/header-library/header-background-image-tablet.webp');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    };
-    @media screen and (min-width: $tablet) {
-        height: 216px;
-        background: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-        url('/src/images/header-library/header-background-image-tablet.webp');
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
-        @media screen and (max-width: ($desktop - 1)) and (min-device-pixel-ratio: 2),
-            screen and (max-width: ($desktop - 1)) and (min-resolution: 192dpi),
-            screen and (max-width: ($desktop - 1)) and (min-resolution: 2dppx) {
-                background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56),
-                        rgba(0, 0, 0, 0.56)),
-                    url('/src/images/header-library/tablet\ 2x.webp');
-    };
-    @media screen and (min-width: $desktop) {
-        height: 216px;
-        background: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-        url('/src/images/header-library/header-background-image-desktop.webp');
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
-        @media screen and (min-device-pixel-ratio: 2),
-            screen and (min-resolution: 192dpi),
-            screen and (min-resolution: 2dppx) {
-                background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56),
-                        rgba(0, 0, 0, 0.56)),
-                    url('/src/images/header-library/desktop\ 2x.webp');
-            }
-
-    }     
-}
+  }
 }
 .header-container {
-    margin-left: auto;
-    margin-right: auto;
-    @media screen and (min-width: $mobile) {
+  margin-left: auto;
+  margin-right: auto;
+  @media screen and (min-width: $mobile) {
     padding-left: 20px;
     padding-right: 20px;
-    };
-    @media screen and (min-width: $tablet) {
+  }
+  @media screen and (min-width: $tablet) {
     padding-left: 32px;
     padding-right: 32px;
-    }
-    @media screen and (min-width: $desktop) {
+  }
+  @media screen and (min-width: $desktop) {
     padding-left: 70px;
     padding-right: 70px;
-    };
+  }
 }
 
 .logo-container {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 nav {
-    
-    margin-bottom: 40px;
-    display:flex;
-    justify-content: space-between;
-    align-items: center;
+  margin-bottom: 40px;
+  // display:flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .logo-container {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .logo-name {
-    @media screen and (max-width: ($tablet - 1)) {
-        display: none;
-    };
-    @media screen and (min-width: $tablet) {
-        display:block;
-    };
-    font-style: normal;
-    font-weight: 500;
-    font-size: 30px;
-    line-height: 1.17;
-    color: $secondary-color;
-    margin-left: 10px;
-    margin-left:10px;
+  @media screen and (max-width: ($tablet - 1)) {
+    display: none;
+  }
+  @media screen and (min-width: $tablet) {
+    display: block;
+  }
+  font-style: normal;
+  font-weight: 500;
+  font-size: 30px;
+  line-height: 1.17;
+  color: $secondary-color;
+  margin-left: 10px;
+  margin-left: 10px;
 }
 
 .pages {
-    display: flex;
+  display: flex;
 }
 
 .library {
-    margin-left: 40px;
-    border-bottom: 3px solid $accent-color;
+  margin-left: 40px;
+  border-bottom: 3px solid $accent-color;
 }
 
 .header-buttons-list {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 40px;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 40px;
 }
 
 .header-button {
-background-color: transparent;
-border: 2px solid $secondary-color;
-border-radius: 5px;
-color:$secondary-color;
+  background-color: transparent;
+  border: 2px solid $secondary-color;
+  border-radius: 5px;
+  color: $secondary-color;
 
-@media screen and (max-width: ($tablet - 1)) {
+  @media screen and (max-width: ($tablet - 1)) {
     width: 129px;
     height: 44px;
-};
+  }
 
-@media screen and (min-width: $tablet) {
+  @media screen and (min-width: $tablet) {
     width: 152px;
     height: 44px;
-};
-@media screen and (min-width: $desktop) {
+  }
+  @media screen and (min-width: $desktop) {
     width: 147px;
-   height: 42px;
-}
-    
+    height: 42px;
+  }
 }
 
 .queue {
+  @media screen and (max-width: ($tablet - 1)) {
+    margin-left: 20px;
+  }
 
-    @media screen and (max-width: ($tablet - 1)) {
-       margin-left: 20px;
-    }
+  @media screen and (min-width: $tablet) {
+    margin-left: 32px;
+  }
 
-    @media screen and (min-width:$tablet) {
-      margin-left: 32px;
-    }
-
-        @media screen and (min-width:$desktop) {
-            margin-left: 16px;
-        }
-        
-    }
+  @media screen and (min-width: $desktop) {
+    margin-left: 16px;
+  }
+}
 
 .page-link {
-    font-style: normal;
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 1.17;
-    color: $secondary-color;
-    text-decoration: none;
-    text-transform: uppercase;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.17;
+  color: $secondary-color;
+  text-decoration: none;
+  text-transform: uppercase;
 }
 
 .header-button:hover {
-    background-color: $accent-color;
-    border:2px solid $accent-color;
-    box-shadow: 0px 8px 43px 0px $accent-color;
+  background-color: $accent-color;
+  border: 2px solid $accent-color;
+  box-shadow: 0px 8px 43px 0px $accent-color;
 }
-.page-link:hover{
-    border-bottom: 3px solid $accent-color;
+.page-link:hover {
+  border-bottom: 3px solid $accent-color;
 }
 .header-button:focus {
-    background-color: $accent-color;
-    border: 2px solid $accent-color;
-    box-shadow: 0px 8px 43px 0px $accent-color;
+  background-color: $accent-color;
+  border: 2px solid $accent-color;
+  box-shadow: 0px 8px 43px 0px $accent-color;
 }
 
 .page-link:focus {
-    border-bottom: 3px solid $accent-color;
+  border-bottom: 3px solid $accent-color;
 }
-
-
