--- a/src/sass/layouts/header-home-page/header-home-page.scss
+++ b/src/sass/layouts/header-home-page/header-home-page.scss
@@ -1,136 +1,121 @@
-$mobile: 320px;
-$tablet: 768px;
-$desktop: 1024px;
 
-$white: #ffffff;
-$dark: #000000;
-$textColor: #545454;
-$accentColor: #ff6b08;
-$svgColor: #818181;
-$warningColor: #ff001b;
-
-$mainFont: 'Roboto', sans-serif;
-
-// -------------------------------------------------------------------------------------------
-
-html {
-    scroll-behavior: smooth;
-    overflow-y: scroll;
-}
-
-img {
-    display: block;
-    max-width: 100%;
-    height: auto;
-}
-
-button {
-    cursor: pointer;
-}
-
-h2 {
-    margin: 0;
-    padding: 0;
-}
-
-ul {
-    padding: 0;
-    margin: 0;
-    list-style: none;
-}
-
-p {
-    padding: 0;
-    margin: 0;
-}
-
-// -----------------------------------------------------------------------------------------
-
-.container {
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 20px;
-    padding-right: 20px;
-
-    @media screen and (min-width: $mobile) {
-        width: $mobile;
-    }
-
-    @media screen and (min-width: $tablet) {
-        width: $tablet;
-        padding-left: 75px;
-        padding-right: 75px;
-    }
-
-    @media screen and (min-width: $desktop) {
-        width: $desktop;
-        padding-left: 71px;
-        padding-right: 71px;
-    }
-}
-
-// ---------------------------------------------------------------------------------------------
-
-.endless-bg-color {
-    background-color: $dark;
-}
-
-.header-bg {
-    margin-left: auto;
-    margin-right: auto;
-    max-width: $mobile;
-    min-height: 230px;
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+.overlay {
+    max-width: 1600px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    background: linear-gradient(to right,
+            rgba(0, 0, 0, 0.56),
+            rgba(0, 0, 0, 0.56)),
         url('../images/header-home-page/header-bg-main-mobile.jpg');
-    background-color: #000000;
-    background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
+    margin-left: auto;
+    margin-right: auto;
 
-    @media screen and (max-width: ($tablet - 1)) and (min-device-pixel-ratio: 2),
-    screen and (max-width: ($tablet - 1)) and (min-resolution: 192dpi),
-    screen and (max-width: ($tablet - 1)) and (min-resolution: 2dppx) {
-        background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-            url('../images/header-home-page/header-bg-main-mobile@2x.jpg');
+    @media screen and (min-width: $mobile) {
+        height: 230px;
+        background: linear-gradient(to right,
+                rgba(0, 0, 0, 0.56),
+                rgba(0, 0, 0, 0.56)),
+            url('../images/header-home-page/header-bg-main-mobile.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+
+        @media screen and (max-width: ($tablet - 1)) and (min-device-pixel-ratio: 2),
+        screen and (max-width: ($tablet - 1)) and (min-resolution: 192dpi),
+        screen and (max-width: ($tablet - 1)) and (min-resolution: 2dppx) {
+            background-image: linear-gradient(to right,
+                    rgba(0, 0, 0, 0.56),
+                    rgba(0, 0, 0, 0.56)),
+                url('../images/header-home-page/header-bg-main-mobile@2x.jpg');
+        }
     }
 
     @media screen and (min-width: $tablet) {
-        max-width: $tablet;
-
-        background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+        height: 219px;
+        background: linear-gradient(to right,
+                rgba(0, 0, 0, 0.56),
+                rgba(0, 0, 0, 0.56)),
             url('../images/header-home-page/header-bg-main-tablet.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+    }
+
+    @media screen and (min-width: $tablet) {
+        height: 216px;
+        background: linear-gradient(to right,
+                rgba(0, 0, 0, 0.56),
+                rgba(0, 0, 0, 0.56)),
+            url('../images/header-home-page/header-bg-main-tablet.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
 
         @media screen and (max-width: ($desktop - 1)) and (min-device-pixel-ratio: 2),
         screen and (max-width: ($desktop - 1)) and (min-resolution: 192dpi),
         screen and (max-width: ($desktop - 1)) and (min-resolution: 2dppx) {
-            background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56),
+            background-image: linear-gradient(to right,
+                    rgba(0, 0, 0, 0.56),
                     rgba(0, 0, 0, 0.56)),
                 url('../images/header-home-page/header-bg-main-tablet@2x.jpg');
         }
-    }
 
-    @media screen and (min-width: $desktop) {
-        max-width: $desktop;
-        background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-            url('../images/header-home-page/header-bg-main-desktop.jpg');
-
-        @media screen and (min-device-pixel-ratio: 2),
-        screen and (min-resolution: 192dpi),
-        screen and (min-resolution: 2dppx) {
-            background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56),
+        @media screen and (min-width: $desktop) {
+            height: 216px;
+            background: linear-gradient(to right,
+                    rgba(0, 0, 0, 0.56),
                     rgba(0, 0, 0, 0.56)),
-                url('../images/header-home-page/header-bg-main-desktop@2x.jpg');
+                url('../images/header-home-page/header-bg-main-desktop.jpg');
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+
+            @media screen and (min-device-pixel-ratio: 2),
+            screen and (min-resolution: 192dpi),
+            screen and (min-resolution: 2dppx) {
+                background-image: linear-gradient(to right,
+                        rgba(0, 0, 0, 0.56),
+                        rgba(0, 0, 0, 0.56)),
+                    url('../images/header-home-page/header-bg-main-desktop@2x.jpg');
+            }
         }
     }
 }
 
-.header-section {
-    padding-top: 58px;
+.header-container {
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 20px;
+    padding-right: 20px;
+    @media screen and (min-width: $mobile) {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    @media screen and (min-width: $tablet) {
+        padding-left: 32px;
+        padding-right: 32px;
+    }
+
+}
+nav {
+    margin-bottom: 40px;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo-container {
+    text-decoration: none;
+    display: flex;
+    align-items: center;
 }
 
 .logo {
     position: absolute;
-    top: 46px;
+    top: 40px;
 
     @media screen and (min-width: $tablet) {
         display: flex;
@@ -138,97 +123,127 @@ p {
     }
 
     text-decoration: none;
-    color: $svgColor;
+
+    color: #818181;
+
     cursor: pointer;
 }
-
-.logo__icon {
+.icon-logo {
+    @media screen and (max-width: ($tablet - 1)) {
+            margin-right: 8px;
+        }
     @media screen and (min-width: $tablet) {
         margin-right: 10px;
     }
 }
 
-.logo__name {
+.logo-name {
     @media screen and (max-width: ($tablet - 1)) {
-        display: none;
+        display: none; 
     }
 
-    font-family: $mainFont;
+    @media screen and (min-width: $tablet) {
+        display: block; 
+    }
+
+    font-style: normal;
     font-weight: 500;
     font-size: 30px;
-    line-height: 1.16;
-    color: $white;
+    line-height: 1.17;
+    color: $secondary-color;
 }
 
-.side-nav {
+.pages {
     display: flex;
+    margin-top: 9px;
     justify-content: flex-end;
-    margin-bottom: 40px;
-    font-family: $mainFont;
+    font-family: $primary-font;
     font-weight: 500;
     font-size: 12px;
     line-height: 1.17;
     text-transform: uppercase;
-    color: $white;
+    color: $secondary-color;
 }
 
-.side-nav__item {
+.page {
     &:first-child {
         margin-right: 39px;
     }
 }
 
-.side-nav__link {
+.page-link {
     text-decoration: none;
     color: inherit;
 }
 
-.side-nav__link--current-page {
+.page-link--current-page {
     position: relative;
 
     &::after {
         content: '';
+
         position: absolute;
         bottom: -3px;
         left: 0;
         height: 3px;
         width: 100%;
-        background-color: $accentColor;
+        background-color: $accent-color;
     }
+}
+// ---------------------------------------------------------------------------------------------
+
+.page-link {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.17;
+    color: $secondary-color;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+.page-link:hover {
+    border-bottom: 3px solid $accent-color;
+}
+
+.page-link:focus {
+    border-bottom: 3px solid $accent-color;
 }
 
 // ---------------------------------------------------------------------------------------------
 
 .search-form {
     position: relative;
-    text-align: center;
+    margin-right: auto;
+    margin-left: auto;
+    @media screen and (max-width: ($tablet - 1)) {
+            width: 280px;
+        }
+    @media screen and (min-width: $tablet) {
+            width: 336px;
+        }
 }
 
 .search-field {
     width: 100%;
     font-size: 14px;
     line-height: 1.14;
-
-    @media screen and (min-width: $tablet) {
-        width: 336px;
-    }
-
     background-color: transparent;
     border: transparent;
-    border-bottom: 1px solid $white;
-    font-family: $mainFont;
-    color: $white;
+    border-bottom: 1px solid $secondary-color;
+    font-family: $primary-font;
+    color: $secondary-color;
 
     &::placeholder {
-        color: $white;
+        color: $secondary-color;
     }
 
     &:focus {
         outline: none;
-        border-bottom: 1px solid $accentColor;
+        border-bottom: 1px solid $accent-color;
 
         &::placeholder {
-            color: $accentColor;
+            color: $accent-color;
         }
     }
 }
@@ -237,21 +252,12 @@ p {
     position: absolute;
     top: 0;
     right: 0;
-
-    @media screen and (min-width: $tablet) {
-        right: 142px;
-    }
-
-    @media screen and (min-width: $desktop) {
-        right: 273px;
-    }
-
     padding: 0;
     background-color: transparent;
     border: transparent;
-    color: $white;
+    color: $secondary-color;
 
     .search-field:focus~& {
-        color: $accentColor;
+        color: $accent-color;
     }
 }
