--- a/src/partials/home-page/main.html
+++ b/src/partials/home-page/main.html
@@ -1,3 +1,3 @@
-<div class="main__container container">
-    <h2>WTF?</h2>
+<div class="main__container container" id="abc">
+  <h2>WTF?</h2>
 </div>
