--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -7,6 +7,8 @@
   @media screen and (min-width: $tablet) {
     width: $tablet;
     padding: 0 32px;
+    display: flex;
+    flex-wrap: wrap;
   }
   @media screen and (min-width: $desktop) {
     width: $desktop;
