main & library container styling

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -4,6 +4,7 @@
 
 @import './components/reset';
 @import './components/container';
+@import './components/main-container';
 @import './components/movie-card';
 @import './components/pagination';
 @import './components/header-home-page.scss';
