--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -1,6 +1,7 @@
 .container {
   margin: 0 auto;
   padding: 0 20px;
+  border: 1px solid black;
   @media screen and (max-width: 767px) {
     width: $mobile;
   }
