--- a/src/sass/components/_movie-card.scss
+++ b/src/sass/components/_movie-card.scss
@@ -1,5 +1,13 @@
 .movie-card {
-  //flex-basis: ;
+  margin-bottom: 20px;
+  @media screen and (min-width: $tablet) {
+    flex-basis: calc((100% - 32px) / 2);
+    margin: 16px 8px;
+  }
+  @media screen and (min-width: $desktop) {
+    flex-basis: calc((100% - 48px) / 3);
+    
+  }
 }
 .movie-card__img {
   width: 280px;
