--- a/src/template/movieCard.hbs
+++ b/src/template/movieCard.hbs
@@ -1,9 +1,13 @@
 {{#each this}}
-    <div class="movie-card" id="movie-card">
-        <img class="movie-card__img" src="../images/dummy/dummy-img.jpg" alt="#" />
-        <div class="movie-card__info">
-          <h2 class="movie-card__title">some genre</h2>
-          <p class="movie-card__brief">some brife | 2022</p>
-        </div>
-      </div>
+  <div class='movie-card' id='movie-card'>
+    <img
+      class='movie-card__img'
+      src='https://image.tmdb.org/t/p/w500{{poster_path}}'
+      alt='#'
+    />
+    <div class='movie-card__info'>
+      <h2 class='movie-card__title'>{{original_title}}</h2>
+      <p class='movie-card__brief'> {{release_date}}</p>
+    </div>
+  </div>
 {{/each}}
