--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -14,3 +14,4 @@
 @import './layouts/footer/footer';
 @import './layouts/footer/footer-modal';
 @import './layouts/loader';
+@import './components/_theme-swith'
