--- a/src/sass/components/_main-container.scss
+++ b/src/sass/components/_main-container.scss
@@ -1,8 +1,10 @@
 .main__container {
   padding: 20px;
   @media screen and (min-width: $tablet) {
-    display: flex;
-    flex-direction: row;
     padding: 52px 24px;
   }
+}
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
 }
