--- a/src/partials/my-library/header.html
+++ b/src/partials/my-library/header.html
@@ -1,7 +1,7 @@
 
 <header class="overlay">
     <div class="header-container">
-        <nav>
+        <nav class="header-navigation">
             <a class="logo-container" href="/src/index.html">
             <svg class="icon-logo" width="24" height="24">
                 <use href="/src/images/icons.svg#icon-logo"></use>
