--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -8,6 +8,7 @@
 @import './components/pagination';
 @import './components/header-home-page.scss';
 @import './components/header-library';
+@import './components/genres-filter';
 @import './components/_button';
 
 @import './components/header-home-page.scss';
