--- a/src/partials/my-library/header.html
+++ b/src/partials/my-library/header.html
@@ -20,10 +20,10 @@
         <div class="button-container">
             <ul class="header-buttons-list">
                 <li>
-                    <button class="header-button watched">WATCHED</button>
+                    <button class="header-button btn--watched">WATCHED</button>
                 </li>
                 <li>
-                    <button class="header-button queue">QUEUE</button>
+                    <button class="header-button btn--queue">QUEUE</button>
                 </li>
             </ul>
         </div>
