--- a/src/sass/components/_modal-movie.scss
+++ b/src/sass/components/_modal-movie.scss
@@ -310,3 +310,8 @@ font-style: normal;
     color: #ffffff;
   }
 }
+.active {
+  border: none;
+  background-color: $accent-color;
+  color: #ffffff;
+}
