--- a/src/template/modal_movie.hbs
+++ b/src/template/modal_movie.hbs
@@ -38,12 +38,12 @@
         <div class="modal-movie-button-wrapper">
           <button
             data-name="watched"
-            class="modal-movie-button modal-left-button"
+            class="modal-movie-button modal-left-button watched"
             type="button"
           >
             ADD TO WATCHED
           </button>
-          <button data-name="queue" class="modal-movie-button modal-right-button" type="button">
+          <button data-name="queue" class="modal-movie-button modal-right-button queue" type="button">
             ADD TO QUEUE
           </button>
         </div>
