--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -16,3 +16,5 @@
 @import './layouts/footer/footer';
 @import './layouts/footer/footer-modal';
 @import './layouts/loader';
+
+@import './components/video-player';
