--- a/src/sass/components/_movie-card.scss
+++ b/src/sass/components/_movie-card.scss
@@ -1,5 +1,6 @@
 .movie-card {
   margin-bottom: 20px;
+  cursor: pointer;
   @media screen and (min-width: $tablet) {
     flex-basis: calc((100% - 32px) / 2);
     margin: 16px 8px;
@@ -8,6 +9,15 @@
     flex-basis: calc((100% - 48px) / 3);
     
   }
+  transform: translateY(0);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.movie-card:hover {
+  transform: translateY(-3%);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .movie-card__img {
   width: 280px;
