--- a/src/partials/utils/switch-theme.html
+++ b/src/partials/utils/switch-theme.html
@@ -1,6 +1,6 @@
 <div class="toolbar container">
     <div class="theme-switch">
-        <svg class="theme-switch__icon" role="img">
+        <svg class="theme-switch__icon theme-switch__icon--accent1" role="img">
             <use href="./images/icons.svg#sun"></use>
         </svg>
 
@@ -11,7 +11,7 @@
             <div aria-hidden="true" class="theme-switch__marker"></div>
         </div>
 
-        <svg class="theme-switch__icon">
+        <svg class="theme-switch__icon theme-switch__icon--accent2">
             <use href="./images/icons.svg#moon"></use>
         </svg>
     </div>
