--- a/src/template/movieCard.hbs
+++ b/src/template/movieCard.hbs
@@ -1,6 +1,7 @@
 {{#each this}}
-  <div class='movie-card' id='movie-card'>
+  <div class='movie-card'>
     <img
+      id='{{id}}'
       class='movie-card__img'
       src='https://image.tmdb.org/t/p/w500{{poster_path}}'
       alt='#'
